[package]
name = "ti_server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full","time"] }
ti_protocol = {path="../ti_protocol"}
rand="0.8"
chrono="0.4"
log="0.4"
log4rs="1"
axum="0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
hyper = "0.14"
reqwest={version="0.11", features=["json"]}
urlencoding = "2.1.0"
tower-http = {version = "0.3", features = ["cors", "fs"]}